fix dark mode toggle margin

--- a/src/components/SharedComponents/DarkModeToggle/style.module.scss
+++ b/src/components/SharedComponents/DarkModeToggle/style.module.scss
@@ -10,7 +10,7 @@
     aspect-ratio: 1;
     height: 1.25em;
     width: 1.25em;
-    border-radius: 2em;
+    border-radius: 100vmax;
     background-color: $color-text;
 
     transition: margin 0.25s ease-out;
@@ -20,7 +20,7 @@
     }
 
     &.light{
-      margin-left: 0.25em;
+      margin-left: 0.4em;
     }
   }
 }
